2006-12-12  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/fc4.py (CommandLang):  Add lang attribute.

	* pykickstart/commands/fc5.py (FC5Handler):  Import from the
	FC4Handler.

2006-12-11  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/fc4.py:  Added first run at data and command
	handling support for Fedora Core 4.

	* pykickstart/commands/fc4.py (KickstartLogVolData,
	KickstartNetworkData, KickstartPartData, KickstartRaidData,
	KickstartVolGroupData, KickstartZFCPData):  Add named arguments to
	__init__ functions to make creating objects programatically easier.
	* pykickstart/commands/fc6.py (KickstartDmRaidData,
	KickstartIscsiData, KickstartRepoData, KickstartUserData):  Likewise.

2006-12-11  Chris Lumens  <clumens@redhat.com>

	* validator/ksvalidator:  Update to handle multiple versions.

	* pykickstart/parser.py (Packages.add):  Move Parser.addPackages here
	since this seems like a sensible method for the Packages object to
	have.

	* pykickstart/version.py (makeHandler):  Add a function to create the
	right handler for a given syntax version.
	(stringToVersion):  Add a function to convert string versions into
	integer versions.

	* pykickstart/commands/base.py:  Need to import errors here.

2006-12-11  Chris Lumens  <clumens@redhat.com>

	* pykickstart/options.py (KSOptionParser.check_values):  Use
	self.lineno instead of lineno.

	* pykickstart/parser.py:  Set packages, scripts, and platform on the
	handler.

	* pykickstart/commands/base.py (BaseHandler.__init__):  This looks
	like the best place to add packages, scripts, and platform.
	(BaseHandler.__str__):  Write out the whole ks file, though we still
	need to get commands in the right order.

	* Merge from HEAD:  Updated translations.

2006-12-08  Chris Lumens  <clumens@redhat.com>

	* pykickstart/data.py:  Removed.
	* pykickstart/handlers.py:  Removed.
	* pykickstart/writer.py:  Removed.

	* pykickstart/__init__.py:  Updated.