@@ -1,3 +1,9 @@
+2006-12-19  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/commands/fc4.py:  Add named arguments to __init__
+	functions for all command handlers.
+	* pykickstart/commands/fc6.py:  Likewise.
+
 2006-12-12  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart/commands/fc4.py (CommandLang):  Add lang attribute.
